# woograph

./: .env.example  .gitignore  PLAN.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
graph/: context.jsonld  global.jsonld  stats.json
pipeline/: pyproject.toml
pipeline/scripts/: batch-process.sh
pipeline/src/woograph/: __init__.py  cli.py  geocode.py  timeline.py
pipeline/src/woograph/convert/: __init__.py  account.py  index.py  pdf.py  video.py  vlm_detect.py  web.py
pipeline/src/woograph/extract/: __init__.py  disambiguate.py  ner.py  relationships.py
pipeline/src/woograph/graph/: __init__.py  fragment.py  jsonld.py  merge.py  registry.py
pipeline/src/woograph/llm/: __init__.py  client.py
pipeline/src/woograph/utils/: __init__.py  cache.py  git.py  validate.py
pipeline/tests/: conftest.py  test_cache.py  test_convert.py  test_disambiguate.py  test_extract.py  test_graph.py  test_llm_client.py  test_merge.py  test_registry.py  test_relationships.py  test_validate.py  test_video_detect.py
pipeline/tests/fixtures/: sample-account-submission.md  sample-account-submission.yaml  sample-submission.yaml  sample-url-submission.yaml
site/: index.html  submit.html  video.html
submissions/: README.md  _schema.yaml  ben-s-ufo-film.yaml  ben-s-video.yaml  cseti-center-for-the-study-of-extraterrestrial-intelligence-working-group-training-manual-2.yaml  elana-danaan-index.yaml  elena-danaan-1.yaml  jfk-104-10003-10041.yaml  pear-1979-precognitive-remote-viewing-stanford.yaml  pear-1982-persistant-paradox-psychic-phenomena.yaml  pear-1986-quantum-mechanics-consciousness.yaml  pear-1987-engineering-anomalies-research.yaml  pear-1988-operator-related-anomalies-rmc.yaml  pear-1989-anomalies-aesthetics.yaml  pear-1989-precognitive-remote-perception-iii.yaml  pear-1991-complementarity-of-consciousness.yaml  pear-1991-count-population-profiles.yaml  pear-1992-bayesian-analysis-reg-data.yaml  pear-1992-experiments-remote-human-machine.yaml  pear-1992-response-hansen-utts-markwick.yaml  pear-1994-linear-pendulum-damping-rate.yaml  pear-1994-series-position-effects-1.yaml  pear-1995-acoustical-resonances-ancient-structures-1.yaml  pear-1995-consciousness-anomalous-physical-phenomena.yaml  pear-1996-fieldreg-anomalies-group-situations.yaml  pear-1996-information-consciousness-health.yaml  pear-1996-precognitive-remote-perception-replication.yaml  pear-1996-selection-versus-influence-revisited.yaml  pear-1997-correlations-random-binary-sequences-12-year-review.yaml  pear-1997-science-subjective.yaml  pear-1997-wishing-good-weather-group-consciousness.yaml  pear-1998-double-slit-consciousness-experiment.yaml  pear-1998-fieldreg-ii-consciousness-field-effects.yaml  pear-1998-gender-differences-human-machine.yaml  pear-1998-information-uncertainty-remote-perception.yaml  pear-1999-physical-basis-intentional-healing.yaml  pear-2000-artreg.yaml  pear-2000-mmi-consortium-portreg-replication.yaml  (+19 more)
worker/: wrangler.toml
(+307 files in other folders)
