[project]
name = "woograph"
version = "0.1.0"
description = "Collaborative knowledge graph builder"
requires-python = ">=3.11"
dependencies = [
    "pymupdf4llm>=0.0.10",
    "trafilatura>=1.12",
    "pyyaml>=6.0",
    "jsonschema>=4.20",
    "click>=8.1",
    "spacy>=3.7",
    "en-core-web-sm @ https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.8.0/en_core_web_sm-3.8.0-py3-none-any.whl",
    "anthropic>=0.40",
    "python-dotenv>=1.2.2",
    "openai>=1.50",
    "marker-pdf>=1.10.2",
    "cfgv>=3.5.0",
    "markdown2>=2.5.5",
    "nodeenv>=1.10.0",
    "py>=1.11.0",
    "six>=1.17.0",
    "threadpoolctl>=3.6.0",
    "typing-extensions>=4.15.0",
]

[project.scripts]
woograph = "woograph.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/woograph"]

[tool.ruff]
target-version = "py311"

[dependency-groups]
dev = [
    "pyright>=1.1.408",
    "pytest>=8.0",
    "ruff>=0.4",
]
